--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <link rel="stylesheet" href="css/styles.css"/>
     <title>Live stock price ticker</title>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js" type="text/javascript"></script>
+    <!-- for using anychart to plot stocks pattern in future versions -->
+    <!-- <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js" type="text/javascript"></script>
     <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-stock.min.js" type="text/javascript"></script>
-    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-data-adapter.min.js"></script>
-
+    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-data-adapter.min.js"></script> -->
     <script>
 
 
@@ -99,6 +100,18 @@
        <td id='c54'></td>
      </tr>
    </table>
+
+  <br>
+
+   <form class="" action="/" method="post">
+     <label for="stockInput">Stock Name:</label>
+     <input type="text" name="stockInput" placeholder="For eg. IBM, MSFT, etc">
+     <button  type="submit">Go</button>
+   </form>
+
+
+
+
   </body>
 
 
